--- a/src/style.css
+++ b/src/style.css
@@ -48,7 +48,7 @@ nav ul li a:hover {
 
 .intro {
   text-align: center;
-  padding: 20px; 
+  padding: 20px;
 }
 
 .intro p {
@@ -59,6 +59,7 @@ nav ul li a:hover {
   max-width: 200px;
   border-radius: 50%;
   margin: 20px 0;
+  padding: 0 0 1em 0;
 }
 
 .intro .perfil {
