--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   font-family: 'Arial', sans-serif;
   background-color: #ECEFF4;
