--- a/src/style.css
+++ b/src/style.css
@@ -12,7 +12,8 @@ body {
   width: 100%;
   height: 100vh;
   font-family: 'Arial', sans-serif;
-  background-color: #ECEFF4;
+  background-color: #1a222a;
+  color: #ECEFF4; 
   line-height: 1.6;
 }
 
@@ -21,7 +22,7 @@ header {
   justify-content: space-between;
   align-items: center; 
   padding:10px 24px; 
-  background: linear-gradient(160deg, #23384d, #1C7396); 
+  background: linear-gradient(to left, #23384d, #1C7396); 
   color: #ECEFF4; 
 }
 
@@ -37,7 +38,7 @@ nav ul li {
 }
 
 nav ul li a {
-  color: white; 
+  color: #ECEFF4; 
   text-decoration: none; 
   transition: color 0.3s; 
 }
@@ -92,6 +93,9 @@ nav ul li a:hover {
 
 .grid-item {
   text-align: center;
+  padding: 10px;
+  border: solid 2px #ECEFF4;
+  border-radius: 10px;
 }
 
 .grid-item img {
@@ -110,8 +114,8 @@ footer {
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  background: linear-gradient(160deg, #23384d, #1C7396); 
-  color: white;
+  background: linear-gradient(to right, #23384d, #1C7396); 
+  color: #ECEFF4;
   text-align: center;
   padding: 10px 0; 
   font-size: 12px;
@@ -119,6 +123,10 @@ footer {
   a {
     text-decoration: none;
     color: #eceff4;
+  }
+
+  a:hover {
+    scale: 110%;
   }
 }
 
